# Anonproxy

./: .env.example  .gitignore  Dockerfile  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
anonproxy/: __init__.py  audit.py  cli.py  config.py  engine.py  restorer.py  surrogates.py  vault.py  verify.py  wizard.py
anonproxy/detectors/: __init__.py  anonymizer_slm.py  gliner2_detector.py  gliner_detector.py  llm_detector.py  openai_pii_detector.py  piiranha_detector.py  regex_detector.py  scope_detector.py
anonproxy/proxy/: __init__.py  app.py  streaming.py  transform.py
burp/: README.md  build.gradle
burp/src/main/java/com/nethemba/anonproxy/: AnonproxyExtension.java
models/: anonymizer-slm.Modelfile
scripts/: benchmark_roundtrip.py
tests/: test_audit.py  test_config.py  test_detectors.py  test_llm_detector.py  test_polish.py  test_proxy.py  test_roundtrip.py  test_scope.py  test_streaming.py  test_tool_calls.py  test_vault.py  test_verify.py  test_webapp.py
